# stellatune

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  rustfmt.toml
apps/stellatune-tui/: Cargo.toml
apps/stellatune-tui/src/: cli.rs  main.rs  paths.rs
apps/stellatune-tui/src/app/: commands.rs  mod.rs  state.rs
apps/stellatune-tui/src/backend/: facade.rs  mod.rs  models.rs  track_token.rs
apps/stellatune-tui/src/ui/: mod.rs
crates/audio-adapters/stellatune-audio-builtin-adapters/: Cargo.toml
crates/audio-adapters/stellatune-audio-builtin-adapters/src/: builtin_decoder.rs  device_sink.rs  lib.rs  playlist_decoder.rs  shared_device_sink.rs  transform_chain_control.rs  wasapi_exclusive_sink.rs
crates/audio-adapters/stellatune-audio-plugin-adapters/: Cargo.toml
crates/audio-adapters/stellatune-audio-plugin-adapters/src/: bridge.rs  decoder_runtime.rs  decoder_stage.rs  lib.rs  lifecycle.rs  orchestrator.rs  output_sink_runtime.rs  output_sink_stage.rs  pipeline.rs  source_plugin.rs  stages.rs  transform_runtime.rs  transform_stage.rs
crates/plugins-native/stellatune-asio-proto/: Cargo.toml
crates/plugins-native/stellatune-asio-proto/src/: lib.rs
crates/plugins-native/stellatune-plugin-asio/: Cargo.toml  README.md  plugin.json
crates/plugins-native/stellatune-plugin-asio-wasm/: Cargo.toml  plugin.json
crates/plugins-native/stellatune-plugin-asio-wasm/scripts/: package-windows.ps1
crates/plugins-native/stellatune-plugin-asio-wasm/src/: client.rs  config.rs  lib.rs  session.rs
crates/plugins-native/stellatune-plugin-asio/scripts/: package-windows.ps1
crates/plugins-native/stellatune-plugin-asio/src/: client.rs  config.rs  descriptor.rs  instance.rs  lib.rs  ring.rs  session.rs  sink.rs
crates/plugins-native/stellatune-plugin-ncm/: Cargo.toml  plugin.json
crates/plugins-native/stellatune-plugin-ncm/scripts/: package-windows.ps1
crates/plugins-native/stellatune-plugin-ncm/src/: decoder.rs  flac_offset.rs  io.rs  lib.rs  tags.rs
crates/plugins-native/stellatune-plugin-netease/: Cargo.toml  README.md  plugin.json
crates/plugins-native/stellatune-plugin-netease/decoder/: Cargo.toml
crates/plugins-native/stellatune-plugin-netease/scripts/: package-windows.ps1
crates/plugins-native/stellatune-plugin-netease/source/: Cargo.toml
crates/plugins-native/stellatune-plugin-netease/src/: decoder.rs  lib.rs
crates/stellatune-asio-host/: Cargo.toml  build.rs
crates/stellatune-asio-host/src/: main.rs
crates/stellatune-audio/: Cargo.toml
crates/stellatune-audio-legacy/: Cargo.toml
crates/stellatune-audio-legacy/src/: ring_buffer.rs
crates/stellatune-audio-legacy/src/decoder/: builtin.rs  error.rs  mod.rs  support.rs  types.rs
crates/stellatune-audio-legacy/src/engine/: config.rs
crates/stellatune-audio-legacy/src/mixer/: layout.rs  matrix.rs  mod.rs
crates/stellatune-audio-legacy/src/output/: wasapi_exclusive.rs
crates/stellatune-audio-plugin-adapters/: Cargo.toml
crates/stellatune-audio-plugin-adapters/src/: dsp_chain_control.rs  dsp_runtime.rs  lib.rs  lifecycle.rs  orchestrator.rs  output_sink_runtime.rs  output_sink_stage.rs  runtime_api.rs  source_plugin.rs  transform_stage.rs  v2_bridge.rs
crates/stellatune-audio-v2/: Cargo.toml
crates/stellatune-audio-v2/src/: assembly.rs  event_hub.rs  lib.rs  types.rs
crates/stellatune-audio-v2/src/control/: actor.rs  engine_handle.rs  messages.rs  startup.rs
crates/stellatune-audio-v2/src/runtime/: mod.rs  runner.rs  sink_worker.rs
crates/stellatune-audio-v2/src/worker/: mod.rs
crates/stellatune-audio-v2/src/workers/: sink_worker.rs
crates/stellatune-audio/src/: assembly.rs  engine.rs  error.rs  lib.rs  pipeline_graph.rs  ring_buffer.rs  types.rs
crates/stellatune-audio/src/config/: engine.rs  gain.rs  mod.rs  sink.rs
crates/stellatune-audio/src/control/: actor.rs  messages.rs  mod.rs  startup.rs
crates/stellatune-audio/src/engine/: actor.rs  config.rs  control.rs  decode.rs  event_hub.rs  messages.rs  (+5 more)
crates/stellatune-backend-api/: Cargo.toml
crates/stellatune-backend-api/src/: app.rs  lib.rs  library.rs  lyrics_service.rs  lyrics_types.rs  player.rs  session.rs
crates/stellatune-ffi/: Cargo.toml
crates/stellatune-ffi/src/: frb_generated.rs  lib.rs  lyrics_service.rs
crates/stellatune-library/: Cargo.toml  build.rs
crates/stellatune-library/migrations/: 0001_init.sql  0002_tracks_meta_scanned_ms.sql  0003_tracks_path_norm.sql  0004_excluded_folders.sql  0005_playlists.sql  0006_playlist_track_order.sql  0007_plugin_state.sql
crates/stellatune-library/src/: lib.rs  service.rs  types.rs  worker.rs
crates/stellatune-output/: Cargo.toml
crates/stellatune-output/src/: asio_external.rs  lib.rs  mmcss.rs  wasapi_exclusive.rs
crates/stellatune-plugin-protocol/: Cargo.toml
crates/stellatune-plugin-protocol/src/: lib.rs
crates/stellatune-plugin-sdk/: Cargo.toml
crates/stellatune-plugin-sdk/examples/: compile_all_abilities.rs  lyrics_component_export.rs
crates/stellatune-plugin-sdk/src/: async_task.rs  codec.rs  common.rs  control.rs  error.rs  errors.rs  export.rs  ffi_guard.rs  ffi_utils.rs  host.rs  host_stream.rs  hot_path.rs  instance.rs  lib.rs  lifecycle.rs  metadata.rs  prelude.rs  sidecar.rs  tests.rs  update.rs
crates/stellatune-plugins/: Cargo.toml
crates/stellatune-plugins/examples/: convert_to_wav.rs  list_plugins.rs
crates/stellatune-plugins/src/: capability_registry.rs  events.rs  lib.rs  load.rs  manifest.rs  service.rs  types.rs  util.rs
crates/stellatune-plugins/tests/: lifecycle_dynamic_lib.rs  multi_plugin_runtime_flow.rs
crates/stellatune-wasm-plugin-sdk/: Cargo.toml
crates/stellatune-wasm-plugin-sdk/examples/: compile_all_abilities.rs  lyrics_component_export.rs
crates/stellatune-wasm-plugin-sdk/src/: export.rs  host_stream.rs  http_client.rs  lib.rs  prelude.rs
crates/stellatune-wasm-plugins/: ARCHITECTURE.md  Cargo.toml
crates/stellatune-wasm-plugins/src/: error.rs  host_runtime.rs  lib.rs  manifest.rs
crates/stellatune-world-bindings/: Cargo.toml
crates/stellatune-world-bindings/src/: generated.rs  lib.rs
(+835 files in other folders)
