[workspace]
resolver = "3"
members = [
  "apps/stellatune-tui",
  "crates/stellatune-audio-core",
  "crates/audio-adapters/stellatune-audio-builtin-adapters",
  "crates/audio-adapters/stellatune-audio-plugin-adapters",
  "crates/plugins-native/stellatune-asio-proto",
  "crates/stellatune-backend-api",
  "crates/stellatune-ffi",
  "crates/stellatune-library",
  "crates/plugins-native/stellatune-plugin-asio-wasm",
  "crates/plugins-native/stellatune-plugin-ncm-wasm-decoder",
  "crates/stellatune-wasm-host-bindings",
  "crates/stellatune-wasm-guest-bindings",
  "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-decoder",
  "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-source",
  "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-lyrics",
  "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-output-sink",
  "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-dsp",
  "crates/stellatune-wasm-plugin-sdk",
  "crates/stellatune-wasm-plugins",
  "crates/stellatune-runtime",
  "crates/stellatune-audio",
]
exclude = ["crates/plugins-native/stellatune-asio-host"]

[workspace.package]
license = "MIT"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[workspace.lints.clippy]
wildcard_imports = "deny"

[workspace.dependencies]
stellatune-audio-core = { path = "crates/stellatune-audio-core" }
stellatune-audio-builtin-adapters = { path = "crates/audio-adapters/stellatune-audio-builtin-adapters" }
stellatune-audio-plugin-adapters = { path = "crates/audio-adapters/stellatune-audio-plugin-adapters" }
stellatune-audio = { path = "crates/stellatune-audio" }
stellatune-asio-proto = { path = "crates/plugins-native/stellatune-asio-proto" }
stellatune-backend-api = { path = "crates/stellatune-backend-api" }
stellatune-ffi = { path = "crates/stellatune-ffi" }
stellatune-library = { path = "crates/stellatune-library" }
stellatune-wasm-host-bindings = { path = "crates/stellatune-wasm-host-bindings" }
stellatune-wasm-guest-bindings = { path = "crates/stellatune-wasm-guest-bindings" }
stellatune-wasm-guest-bindings-decoder = { path = "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-decoder" }
stellatune-wasm-guest-bindings-source = { path = "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-source" }
stellatune-wasm-guest-bindings-lyrics = { path = "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-lyrics" }
stellatune-wasm-guest-bindings-output-sink = { path = "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-output-sink" }
stellatune-wasm-guest-bindings-dsp = { path = "crates/stellatune-wasm-guest-bindings-worlds/stellatune-wasm-guest-bindings-dsp" }
stellatune-wasm-plugin-sdk = { path = "crates/stellatune-wasm-plugin-sdk" }
stellatune-wasm-plugins = { path = "crates/stellatune-wasm-plugins" }
stellatune-runtime = { path = "crates/stellatune-runtime" }

anyhow = "1.0.101"
crossbeam-channel = "0.5.15"
flutter_rust_bridge = "=2.11.1"
ringbuf = "0.4.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "macros",
] }
walkdir = "2.5.0"
cpal = "0.17.2"
symphonia = { version = "=0.5.4", default-features = false, features = [
  "aac",
  "alac",
  "mp1",
  "mp2",
  "mp3",
  "flac",
  "wav",
  "aiff",
  "caf",
  "isomp4",
  "ogg",
  "vorbis",
  "pcm",
  "adpcm",
  "opt-simd",
] }
rubato = "1.0.1"
audioadapter-buffers = "2.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "local-time",
] }
notify = "8.2.0"
libloading = "0.9.0"
toml = "0.9.2"
serde_json = "1.0.149"
arc-swap = "1.8.2"
parking_lot = "0.12.5"
m3u8-rs = "6.0.0"
wasmtime = { version = "41.0.3", features = ["component-model", "cache"] }
wit-bindgen = "0.53.1"
