[workspace]
resolver = "3"
members = [
  "apps/stellatune-tui",
  "crates/stellatune-audio-core",
  "crates/audio-adapters/stellatune-audio-builtin-adapters",
  "crates/audio-adapters/stellatune-audio-plugin-adapters",
  "crates/plugins-native/stellatune-asio-proto",
  "crates/stellatune-backend-api",
  "crates/stellatune-ffi",
  "crates/stellatune-library",
  "crates/plugins-native/stellatune-plugin-asio",
  "crates/plugins-native/stellatune-plugin-ncm",
  "crates/plugins-native/stellatune-plugin-netease/source",
  "crates/plugins-native/stellatune-plugin-netease/decoder",
  "crates/stellatune-host-bindings",
  "crates/stellatune-world-bindings",
  "crates/guest-worlds/decoder",
  "crates/guest-worlds/source",
  "crates/guest-worlds/lyrics",
  "crates/guest-worlds/output-sink",
  "crates/guest-worlds/dsp",
  "crates/stellatune-plugin-sdk",
  "crates/stellatune-plugins",
  "crates/stellatune-runtime",
  "crates/stellatune-audio",
]
exclude = [
  "crates/plugins-native/stellatune-asio-host",
]

[workspace.package]
license = "MIT"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[workspace.lints.clippy]
wildcard_imports = "deny"

[workspace.dependencies]
stellatune-audio-core = { path = "crates/stellatune-audio-core" }
stellatune-audio-builtin-adapters = { path = "crates/audio-adapters/stellatune-audio-builtin-adapters" }
stellatune-audio-plugin-adapters = { path = "crates/audio-adapters/stellatune-audio-plugin-adapters" }
stellatune-audio = { path = "crates/stellatune-audio" }
stellatune-asio-proto = { path = "crates/plugins-native/stellatune-asio-proto" }
stellatune-backend-api = { path = "crates/stellatune-backend-api" }
stellatune-library = { path = "crates/stellatune-library" }
stellatune-host-bindings = { path = "crates/stellatune-host-bindings" }
stellatune-world-bindings = { path = "crates/stellatune-world-bindings" }
stellatune-world-decoder = { path = "crates/guest-worlds/decoder" }
stellatune-world-source = { path = "crates/guest-worlds/source" }
stellatune-world-lyrics = { path = "crates/guest-worlds/lyrics" }
stellatune-world-output-sink = { path = "crates/guest-worlds/output-sink" }
stellatune-world-dsp = { path = "crates/guest-worlds/dsp" }
stellatune-plugin-sdk = { package = "stellatune-plugin-sdk", path = "crates/stellatune-plugin-sdk" }
stellatune-plugins = { package = "stellatune-plugins", path = "crates/stellatune-plugins" }
stellatune-runtime = { path = "crates/stellatune-runtime" }

anyhow = "1.0.101"
arc-swap = "1.8.2"
async-trait = "0.1.89"
audioadapter-buffers = "2.0.0"
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.5.59", features = ["derive"] }
cpal = "0.17.3"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
directories = "5.0.1"
flate2 = "1.1.9"
flutter_rust_bridge = "=2.11.1"
futures-util = "0.3.32"
get_if_addrs = "0.5.3"
local-ip-address = "0.6.10"
m3u8-rs = "6.0.0"
memmap2 = "0.9.10"
mime_guess = "2.0.5"
ncmdump = "0.8.0"
notify = "8.2.0"
parking_lot = "0.12.5"
postcard = { version = "1.1.3", default-features = false }
rand = "0.10.0"
ratatui = "0.29.0"
rawzip = "0.4.3"
reqwest = { version = "0.12.28", default-features = false }
ringbuf = "0.4.8"
roxmltree = "0.21.1"
rubato = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.2"
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "macros",
] }
symphonia = { version = "=0.5.4", default-features = false, features = [
  "aac",
  "alac",
  "mp1",
  "mp2",
  "mp3",
  "flac",
  "wav",
  "aiff",
  "caf",
  "isomp4",
  "ogg",
  "vorbis",
  "pcm",
  "adpcm",
  "opt-simd",
] }
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "local-time",
] }
url = "2.5.8"
walkdir = "2.5.0"
wasapi = "0.22.0"
wasmtime = { version = "41.0.3", features = ["component-model", "cache"] }
wasmtime-wasi = "41.0.3"
wat = "1.245.1"
windows = { version = "0.62.2", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
] }
wit-bindgen = "0.53.1"
