[package]
name = "stellatune-tui"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

stellatune-backend-api.workspace = true
stellatune-library.workspace = true
stellatune-audio.workspace = true

clap.workspace = true
crossterm.workspace = true
directories.workspace = true
ratatui.workspace = true
