[package]
name = "stellatune-audio-plugin-adapters"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
stellatune-audio-core.workspace = true
stellatune-audio-v2.workspace = true
stellatune-plugin-api.workspace = true
stellatune-plugins.workspace = true
stellatune-runtime.workspace = true

[lints]
workspace = true
