[package]
name = "stellatune-audio"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
crossbeam-channel.workspace = true
ringbuf.workspace = true
thiserror.workspace = true
rubato.workspace = true
audioadapter-buffers.workspace = true
tracing.workspace = true

stellatune-core.workspace = true
stellatune-decode.workspace = true
stellatune-dsp.workspace = true
stellatune-output.workspace = true
stellatune-plugins.workspace = true
