[package]
name = "stellatune-audio"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
crossbeam-channel.workspace = true
ringbuf.workspace = true
thiserror.workspace = true
rubato.workspace = true
audioadapter-buffers.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
arc-swap.workspace = true
tokio.workspace = true
async-trait = "0.1.89"

stellatune-core.workspace = true
stellatune-decode.workspace = true
stellatune-dsp.workspace = true
stellatune-mixer.workspace = true
stellatune-output.workspace = true
stellatune-plugin-api.workspace = true
stellatune-plugins.workspace = true
stellatune-runtime.workspace = true

[lints]
workspace = true

