[package]
name = "stellatune-audio"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
crossbeam-channel.workspace = true
ringbuf.workspace = true
tokio.workspace = true
tracing.workspace = true
rubato.workspace = true
audioadapter-buffers.workspace = true
serde.workspace = true
serde_json.workspace = true
arc-swap.workspace = true

stellatune-audio-core.workspace = true
stellatune-runtime.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[lints]
workspace = true
