[package]
name = "stellatune-backend-api"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
sqlx.workspace = true
arc-swap.workspace = true
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "gzip"] }
tokio-util = { version = "0.7.13", features = ["io"] }
url = "2.5.4"

stellatune-audio.workspace = true
stellatune-core.workspace = true
stellatune-library.workspace = true
stellatune-plugins.workspace = true
