[package]
name = "stellatune-backend-api"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
arc-swap.workspace = true
flutter_rust_bridge.workspace = true
async-trait.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "gzip"] }
tokio-util = { workspace = true, features = ["io"] }
url.workspace = true

stellatune-audio-builtin-adapters.workspace = true
stellatune-audio-core.workspace = true
stellatune-audio-plugin-adapters.workspace = true
stellatune-audio.workspace = true
stellatune-library.workspace = true
stellatune-plugins.workspace = true
stellatune-runtime.workspace = true

[lints]
workspace = true

