[package]
name = "stellatune-ffi"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
name = "stellatune_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
frb = ["stellatune-plugin-api/frb"]

[dependencies]
anyhow.workspace = true
flutter_rust_bridge.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.8.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "gzip"] }
roxmltree = "0.21.1"
url = "2.5.4"
tokio-util = { version = "0.7.13", features = ["io"] }
mime_guess = "2.0.5"
rand = "0.10.0"
local-ip-address = "0.6.6"
get_if_addrs = "0.5.3"
socket2 = "0.6"
serde.workspace = true
serde_json.workspace = true

stellatune-backend-api.workspace = true
stellatune-audio.workspace = true
stellatune-library.workspace = true
stellatune-plugin-api.workspace = true
stellatune-runtime.workspace = true

[lints]
workspace = true


