[package]
name = "stellatune-ffi"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
name = "stellatune_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
frb = []

[dependencies]
anyhow.workspace = true
flutter_rust_bridge.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "gzip"] }
roxmltree.workspace = true
url.workspace = true
tokio-util = { workspace = true, features = ["io"] }
mime_guess.workspace = true
rand.workspace = true
local-ip-address.workspace = true
get_if_addrs.workspace = true
socket2.workspace = true
serde.workspace = true
serde_json.workspace = true

stellatune-backend-api.workspace = true
stellatune-audio-plugin-adapters.workspace = true
stellatune-audio.workspace = true
stellatune-library.workspace = true
stellatune-runtime.workspace = true

[lints]
workspace = true


