[package]
name = "stellatune-library"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
symphonia.workspace = true

stellatune-core.workspace = true
