[package]
name = "stellatune-library"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
symphonia.workspace = true
notify.workspace = true

stellatune-core.workspace = true
serde_json.workspace = true
base64 = "0.22.1"

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
stellatune-plugins.workspace = true
