[package]
name = "stellatune-output"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
thiserror.workspace = true
cpal.workspace = true
anyhow.workspace = true
serde.workspace = true

[target.'cfg(windows)'.dependencies]
wasapi = "0.22.0"
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }
