[package]
name = "stellatune-plugin-protocol"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
default = []
frb = ["dep:flutter_rust_bridge"]

[dependencies]
flutter_rust_bridge = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
stellatune-core.workspace = true

[lints]
workspace = true

