[package]
name = "stellatune-plugin-sdk"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
stellatune-world-bindings.workspace = true
stellatune-world-decoder.workspace = true
stellatune-world-source.workspace = true
stellatune-world-lyrics.workspace = true
stellatune-world-output-sink.workspace = true
stellatune-world-dsp.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
