[package]
name = "stellatune-plugins"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
tracing.workspace = true
rawzip = "0.4.3"
flate2 = "1.1.9"
tempfile = "3.20.0"

stellatune-plugin-api.workspace = true
stellatune-plugin-protocol.workspace = true
stellatune-core.workspace = true

[dev-dependencies]
stellatune-decode.workspace = true

[lints]
workspace = true

