[package]
name = "stellatune-plugins"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
stellatune-host-bindings.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
tracing.workspace = true
thiserror.workspace = true
memmap2 = "0.9.10"
rawzip = "0.4.3"
flate2 = "1.1.9"
tempfile = "3.25.0"
wasmtime.workspace = true
wasmtime-wasi = "41.0.3"
parking_lot.workspace = true
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }

[dev-dependencies]
wat = "1.245.1"

[lints]
workspace = true
