[package]
name = "stellatune-plugins"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
stellatune-host-bindings.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
tracing.workspace = true
thiserror.workspace = true
memmap2.workspace = true
rawzip.workspace = true
flate2.workspace = true
tempfile.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
parking_lot.workspace = true
reqwest = { workspace = true, features = ["blocking", "rustls-tls", "gzip"] }

[dev-dependencies]
wat.workspace = true

[lints]
workspace = true
