[package]
name = "stellatune-wasm-plugin-sdk"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
stellatune-wasm-guest-bindings.workspace = true
stellatune-wasm-guest-bindings-decoder.workspace = true
stellatune-wasm-guest-bindings-source.workspace = true
stellatune-wasm-guest-bindings-lyrics.workspace = true
stellatune-wasm-guest-bindings-output-sink.workspace = true
stellatune-wasm-guest-bindings-dsp.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true

[lints]
workspace = true
