[package]
name = "stellatune-world-bindings"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
stellatune-world-decoder.workspace = true
stellatune-world-source.workspace = true
stellatune-world-lyrics.workspace = true
stellatune-world-output-sink.workspace = true
stellatune-world-dsp.workspace = true

[lints]
workspace = true
