[package]
name = "stellatune-audio-builtin-adapters"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
cpal.workspace = true
ringbuf.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
symphonia.workspace = true
stellatune-audio-core.workspace = true
stellatune-audio.workspace = true
m3u8-rs.workspace = true

[target.'cfg(windows)'.dependencies]
wasapi = "0.22.0"
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[lints]
workspace = true
