[package]
name = "stellatune-audio-plugin-adapters"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
stellatune-audio-core.workspace = true
stellatune-audio.workspace = true
stellatune-plugins.workspace = true

[lints]
workspace = true
