[package]
name = "stellatune-plugin-asio"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
stellatune-plugin-sdk.workspace = true
stellatune-asio-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard = { version = "1.1.3", default-features = false }

[lints]
workspace = true
